Fix hidden articles on iPhones

--- a/resources/assets/scss/components/_twitter.scss
+++ b/resources/assets/scss/components/_twitter.scss
@@ -138,7 +138,7 @@ textarea {
 
 /* Small only */
 @media screen and (max-width: 39.9375em) {
-  .twitter-container,
+  .twitter-feed,
   .twitter-options {
     display: none;
   }
